--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ edition = "2021"
 [dependencies]
 argh = "0.1.10"
 inquire = "0.6.1"
+lazy_static = "1.4.0"
 owo-colors = "3.5.0"
+pbr = "1.1.1"
+rand = "0.8.5"
+regex = "1.8.1"
 reqwest = { version = "0.11.17", features = ["blocking", "json"] }
 serde = { version = "1.0.160", features = ["derive"] }
 thiserror = "1.0.40"
