--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 argh = "0.1.10"
+indicatif = "0.17.3"
 inquire = "0.6.1"
 lazy_static = "1.4.0"
 owo-colors = "3.5.0"
-pbr = "1.1.1"
 rand = "0.8.5"
 regex = "1.8.1"
 reqwest = { version = "0.11.17", features = ["blocking", "json"] }
