Update Cargo.toml to publish crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [package]
 name = "mahou"
+description = "Magically easy anime downloads"
+authors = ["Leonardo Riether <riether.leonardo@gmail.com>"]
+readme = "README.md"
+license = "GPL-3.0-or-later"
+repository = "https://github.com/LeoRiether/mahou"
+keywords = ["anime", "cli", "xdcc"]
 version = "0.1.0"
 edition = "2021"
 
