--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,6 @@ lazy_static = "1.4.0"
 owo-colors = "3.5.0"
 rand = "0.8"
 regex = "1.8"
-reqwest = { version = "0.11.17", features = ["blocking", "json", "rustls"] }
+reqwest = { version = "0.11.17", features = ["blocking", "json", "rustls", "rustls-tls"] }
 serde = { version = "1.0.160", features = ["derive"] }
 thiserror = "1.0.40"
