--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aho-corasick = "1.0.1"
 argh = "0.1.10"
+dirs = "5.0.0"
 indicatif = "0.17"
 inquire = "0.6"
 lazy_static = "1.4.0"
